// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreakTimerForm should match snapshot 1`] = `
<div
  className="css-j7qwjs"
>
  <div
    className="css-102g4jn"
  >
    <input
      className="css-1ay9vb9"
      id="break-timer"
      onChange={[Function]}
      type="checkbox"
    />
    <h4
      className="css-11ejjzl"
      color="color"
      labelFor="break-timer"
    >
      Break Timer
    </h4>
  </div>
</div>
`;

exports[`BreakTimerForm should match snapshot when enabled 1`] = `
<div
  className="css-j7qwjs"
>
  <div
    className="css-102g4jn"
  >
    <input
      checked={true}
      className="css-1ay9vb9"
      id="break-timer"
      onChange={[Function]}
      type="checkbox"
    />
    <h4
      className="css-11ejjzl"
      color="color"
      labelFor="break-timer"
    >
      Break Timer
    </h4>
  </div>
  <div
    className="css-1lqrh8c"
  >
    <div
      className="css-j7qwjs"
    >
      <label
        className="css-11ejjzl"
        color="mischka"
        htmlFor="break-timer-time"
      >
        <small
          className="css-0"
        >
          Shown in NaN minutes of usage
        </small>
      </label>
      <input
        backgroundColor="mischka"
        className="css-1hi28e2"
        color="outerSpace"
        id="break-timer-time"
        onChange={[Function]}
        type="number"
        value={NaN}
      />
    </div>
  </div>
</div>
`;
